cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 11)
project( udp_sending )
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package( OpenCV REQUIRED )
find_package( Threads REQUIRED )
add_executable( client Client.cpp PracticalSocket.cpp )
target_link_libraries( client ${OpenCV_LIBS} )
target_link_libraries ( client Threads::Threads )
