cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 11)
project( udp_sending )
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package( OpenCV REQUIRED )
find_package( Threads REQUIRED )
add_executable( server Server.cpp PracticalSocket.cpp ObjectDetection.cpp ObjectDetection.h Library.h Contour.cpp Contour.h Noise.cpp Noise.h Utils.h Utils.cpp depthPerception.cpp depthPerception.h )
target_link_libraries( server ${OpenCV_LIBS} )
target_link_libraries( server Threads::Threads )
